[package]
name = "lin-rs"
version = "0.1.0"
authors = ["wayslog <wayslog@163.com>"]

[[bin]]
name="compute"
path="src/bin/compute.rs"

[lib]
name="lin"
path="src/lib.rs"

[dependencies]
log="*"
itertools = "0.5.6"
env_logger="*"
futures = "0.1"
tokio-core = "0.1"
futures-cpupool = "0.1"
crossbeam = "0.2.10"
num_cpus = "1.1.0"
serde = "0.8"
serde_derive = "0.8"
serde_json = "0.8"  # just for the example, not required in general
hyper = "0.9.12"
fnv = "1.0.5"
net2 = "0.2.26"
